Fixed Blue-card sizing issues on small screen sizes. Added a BurstPool to projects
 Changes to be committed:
	modified:   index.html
	modified:   stylesheet.css

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,27 +66,25 @@ section ul li {
 	top: 0px;
 	left: 0px;
 	width: 92vw;
-	height: 75.1vh;
+	height: 70%;
 	margin-left: 4%;
 	margin-top: 4%;
 }
 
 .card {
-	color:white;
-	position:relative;
+	color: white;
+	position: relative;
 	text-align: center;
-	height: inherit;
-	background-color: inherit;
-	width:inherit;
-	height:inherit;
 	overflow-x: hidden;
 	overflow-y: auto;
+	height: 100%;
 	transform: rotateX(540deg);
 	transform-style: preserve-3d;
 }
 
 .blueBox {
 	background-color: #2b3856;
+	min-height: 100%;
 	transform-style:preserve-3d;
 }
 
@@ -110,13 +108,6 @@ section ul li {
 	width: 0%;
 	height: 0%;
 	transform: rotateX(180deg);
-}
-
-.back ul {
-	line-height: 40px;
-	list-style-type: none;
-	margin: 0;
-	background-color: inherit;
 }
 
 /* BUTTONS */
@@ -147,7 +138,6 @@ button {
 .site-wrapper {
 	background-color: #81D8D0;
 }
-
 
 /* GENERAL */
 
